Phone friendly updates

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,15 +8,16 @@
 body {
   font-family: "Lato", sans-serif;
   line-height: 1.15; /* Adjusted line height for consistency */
+  font-size: 16px; /* Adjusted base font size */
 }
 
 .main {
-  margin-left: 15%;
   font-size: 22px;
   line-height: 35px;
   padding: 1% 5%;
-  padding-left: 10%;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .sidenav {
@@ -30,24 +31,24 @@ body {
 }
 
 .navblock {
-  margin:auto;
+  margin: auto;
   width: 100%;
   height: 90%;
   display: flex;
 }
 
 .navblock_text {
-  margin:auto;
+  margin: auto;
   width: 100%;
   padding-top: 15%;
   padding-bottom: 15%;
 }
 
 .navblock_text a {
-  padding: 26px 16px 26px 16px;
+  padding: 26px 16px;
   text-decoration: none;
   text-align: center;
-  font-size: 25px;
+  font-size: 1.25rem; /* Adjusted font size */
   color: #818181;
   display: block;
 }
@@ -65,140 +66,136 @@ body {
   text-align: center;
 }
 
-.main > div{
+.main > div {
   margin-top: 5%;
   display: flex;
 }
 
-.main > div > h1{
- padding-top: 3%;
-} 
-
-.main > div > img{
-  width:100px;
-  height: 100px;
+.main > div > h1 {
+  padding-top: 3%;
 }
 
-
-.about_photo{
-  width: 500px;
-  height:300px;
-  object-fit:cover;
-  border-radius:5%;
-  margin-top: 30%;
-  margin-left: 5%;
-  margin-right: 5%;
-
+.main > div > img {
+  width: auto;
+  height: auto;
 }
 
-.about_photo1{
-  width: 400px;
-  height:300px;
-  object-fit:cover;
-  border-radius:5%;
+.about_photo {
+  width: 100%;
+  max-width: 500px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 5%;
+  margin: 5%;
 }
 
-.about{
- padding-top: 5%;
-  display:flex;
-  justify-content: space-between;
-
+.about_photo1 {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 5%;
 }
 
-.about2{
-  display:flex;
-  justify-content: space-evenly;
-
-}
-
-.about > div{
-  width: 50%;
-  height: 0%;
+.about {
   padding-top: 5%;
-  padding-left: 5%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap; /* Allow wrapping for smaller screens */
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.partners {
+  padding-top: 5%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap; /* Allow wrapping for smaller screens */
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+
+.about2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about > div {
+  width: auto;
+  max-width: auto;
+  height: auto;
+  padding: 5%;
 }
 
 .about_text {
-  padding-top: 5%;
-  padding-right: 5%;
-  padding-bottom: 5%;
-  margin-left: 0%;
-  margin-bottom: 15%;
+  padding: 5%;
+  margin-bottom: 10%;
   border-radius: 50px;
   background-color: rgb(248, 246, 246);
   box-shadow: 2px 10px 20px #bcbcbc;
-  width:100%;
+  width: 100%;
+  max-width: 800px; /* Adjust as needed */
+  height: auto;
 }
 
-
-
-.partners > h2{
-  padding-left: 50%;
+.partners > h2 {
+  text-align: center;
   color: green;
-  
-}
-
-.partners > h2{
-  font-size: x-large;
+  font-size: 1.5rem; /* Adjusted font size */
   margin-bottom: 5%;
 }
 
-
-.logo{
-  margin-left: 20%;
+.logo {
+  margin: 0 auto;
   display: flex;
+  flex-wrap: wrap; /* Allow wrapping for smaller screens */
   justify-content: space-evenly;
-  
 }
 
-.logo > a > img{
+.logo > a > img {
   width: 100px;
   height: 100px;
 }
 
-#uwLogo{
+#uwLogo {
   margin-top: 2%;
   width: 400px;
   height: 100px;
-
 }
 
-
-
-h1{
-  font-size: 150%;
+h1 {
+  font-size: 1.5rem; /* Adjusted font size */
 }
-
 
 .about_text2 {
-  padding-left: 10%;
-  padding-top: 5%;
-  padding-right: 10%;
-  padding-bottom: 5%;
+  padding: 5%;
   margin-bottom: 10%;
-  margin-left: 0%;
   border-radius: 50px;
   background-color: rgb(248, 246, 246);
   box-shadow: 2px 10px 20px #bcbcbc;
-  width:100%;
-  height: 800px;
+  width: 100%;
+  max-width: 800px; /* Adjust as needed */
+  height: auto;
 }
 
-.appImg{
+.appImg {
   display: flex;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
+  justify-content: center; /* Center the images */
+  gap: 1rem; /* Add some space between the images */
+  margin-top: 1rem;
+  width: 100%; /* Ensure full width */
 }
 
-.appImg > img{
-  width: 350px;
-  height: 250px;
-  margin-top: 10%;
+.appImg > img {
+  width: 100%;
+  max-width: 350px; /* Adjust the size as needed */
+  height: auto;
   object-fit: cover;
   border-radius: 25px;
-
 }
-
-
 
 .about_text h1,
 .about_text2 h1 {
@@ -206,9 +203,8 @@ h1{
   color: green;
 }
 
- p , ul{
-  font-size: medium;
-  
+p, ul {
+  font-size: 1rem; /* Adjusted font size */
 }
 
 .about_text ul,
@@ -216,193 +212,181 @@ h1{
   padding-left: 10%;
 }
 
-
-
-
-
-.team{
-  margin:5%;
+.team {
+  margin: 5%;
+  flex-direction: column;
+ 
+  max-width: 1200px; /* Adjust as needed */
+  justify-content: space-evenly;
 }
 
-.person > img{
-  width:100px;
-  height:100px;
+.person > img {
+  width: 100px;
+  height: 100px;
   border-radius: 25%;
   object-fit: cover;
   margin-right: 10%;
+  justify-content: space-evenly;
 }
-
-
 
 .projects {
-  margin-left: 20%;
-  font-size: 22px;
+  font-size: 1.375rem; /* Adjusted font size */
   line-height: 35px;
-  padding-right: 10%;
-  padding-left: 5%;
-  padding-top: 1%;
+  padding: 1% 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.projects > h1{ 
+.projects > h1 {
   color: green;
-  margin-top:5%;
-  margin-bottom:10%;
+  margin-top: 5%;
+  margin-bottom: 10%;
 }
 
-.project1{
-  margin: 5% 25% 10% 0%  ;
-  padding: 10% 10% 10% 10%;
+.project1, .project2 {
+  margin: 5% 0;
+  padding: 5%;
   border-radius: 50px;
   background-color: rgb(248, 246, 246);
   box-shadow: 2px 10px 20px #bcbcbc;
-  width:100%;
+  width: 100%;
+  max-width: 800px;
   display: flex;
+  flex-wrap: wrap; /* Allow wrapping for smaller screens */
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.project1 > img{
-  margin-left: 5%;
-  width: 40%;
-  height: 40%;
+.project1 > img, .project2 > img {
+  margin: 5%;
+  width: 100%;
+  max-width: 300px;
+  height: auto;
   border-radius: 25%;
 }
 
-.project2 > img{
-  margin-right: 5%;
-  width: 300px;
-  height: 300px;
-  border-radius: 25%;
-}
-.project2{
-  margin: 5% 25% 10% 10%  ;
-  padding: 10% 10% 10% 10%;
-  border-radius: 50px;
-  background-color: rgb(248, 246, 246);
-  box-shadow: 2px 10px 20px #bcbcbc;
-  width:100%;
-  display: flex;
-}
-
-.project1 h2, 
-.project2 h2{
+.project1 h2, .project2 h2 {
   padding-bottom: 5%;
   color: green;
 }
 
-.team{
-  margin-left:20%;
-  padding-left: 10%;
-  padding-right: 5%;
-
-}
-
-
-.person{
+.person {
   padding-top: 2%;
   margin-bottom: 10%;
   box-shadow: 2px 2px 20px #e6e9ea;
   width: 100%;
+  max-width: 800px;
   border-radius: 25px;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap; /* Allow wrapping for smaller screens */
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.person > .img > img{
-  width: 200px;
-  height: 200px;
+.person > .img > img {
+  width: 100%;
+  max-width: 200px;
+  height: auto;
   border-radius: 25px;
   object-fit: cover;
-  margin:5% 5% 5% 10%;
-  
-}
-
-.person >  .pHeader > h2{
-  padding-top: 25%;
-  margin-right: 5%;
-  color: green;
-  width: 300px;
-}
-
-.person > .pHeader{
-  padding-top: 10;
-  padding-right: 20%;
-}
-
-
-
-
-.Event{
-  display: flex;
-  justify-content: space-between;
-  padding-top: 2%;
-  margin-bottom: 10%;
-  box-shadow: 2px 2px 20px #e6e9ea;
-  width: 100%;
-  border-radius: 25px;
-}
-
-.Event > .img > img{
-  margin-left: 15%;
-  margin-bottom:10%;
-  width: 300px;
-  height: 300px;
-}
-
-.Event > div > h2{
-  padding-top: 20%;
-  padding-right: 10%;
-  margin-right: 50%;
-  color: green;
-  width: 450px;
-}
-
-.Event > div{
-  padding-top: 10;
-  padding-right: 20%;
-}
-
-
-.tierhead h3{
-  background-color: rgb(248, 246, 246);
-  color: green;
-  box-shadow: 2px 10px 20px #e6e9ea;
-  padding: 5% 7% 5% 5%;
-  border-radius: 50px;
-  margin: 0%;
-}
-.tier{
-  background-color: rgb(248, 246, 246);
-  box-shadow: 2px 10px 20px #bcbcbc;
-  padding:5%;
-  padding-right: 8%;
-  border-radius: 50px;
-  display: flex;
+  margin: 5%;
   justify-content: space-evenly;
 }
 
-.tier h4{
+.person > .pHeader > h2 {
+  margin-top: 2%;
+  margin-right: 5%;
+  color: green;
+  width: 100%;
+  max-width: auto;
+}
+
+.person > .pHeader {
+  padding: 2%;
+}
+
+.Event {
+  display: flex;
+  flex-wrap: column; /* Allow wrapping for smaller screens */
+  justify-content: space-evenly;
+  padding-top: 2%;
+  margin-bottom: 10%;
+  box-shadow: 2px 2px 20px #e6e9ea;
+  width: 100%;
+  max-width: 800px;
+  border-radius: 25px;
+  align-items: center;
+}
+
+.Event > .img > img {
+  margin: 5%;
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+}
+
+.Event > div > h2 {
+  padding-top: 2%;
+  margin-right: 5%;
+  color: green;
+  width: 100%;
+  max-width: 450px;
+}
+
+.Event > div {
+  padding: 2%;
+}
+
+.tierhead h3 {
+  background-color: rgb(248, 246, 246);
+  color: green;
+  box-shadow: 2px 10px 20px #e6e9ea;
+  padding: 5%;
+  border-radius: 50px;
+  margin: 0;
+  font-size: 1.25rem; /* Adjusted font size */
+  text-align: center;
+  flex-wrap: column; /* Allow wrapping for smaller screens */
+
+}
+
+.tier {
+  background-color: rgb(248, 246, 246);
+  box-shadow: 2px 10px 20px #bcbcbc;
+  padding: 5%;
+  border-radius: 50px;
+  display: flex;
+  flex-wrap: column; /* Allow wrapping for smaller screens */
+  justify-content: space-evenly;
+  width: auto;
+  max-width: 800px;
+
+}
+
+.tier h4 {
+  text-align: center;
+  font-size: 1.25rem; /* Adjusted font size */
+}
+
+.tier p {
+  font-size: 1rem; /* Adjusted font size */
   text-align: center;
 }
 
-.tier p{
-  font-size: medium;
-  text-align: center;
-}
-
-#disclam{
+#disclam {
   padding-top: 5%;
   text-align: center;
   font-size: small;
   font-weight: bold;
 }
 
-.tier2{
-  padding-left: 5%;
-  padding-right: 5%;
+.tier2 {
+  padding: 5%;
+  
 }
 
-
-
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1024px) {
   .sidenav {
     width: 100%;
     height: auto;
@@ -421,8 +405,93 @@ h1{
   }
   .main {
     margin-left: 0;
-    padding: 20% 4% 20% 4%;
+    padding: 5% 4%;
+    
+  }
+  .about_photo, .about_photo1 {
+    width: 100%;
+    height: auto;
+  }
+  .projects, .team, .tier, .appImg  {
+    flex-direction: column;
+    align-items: center;
+  }
+  .projects > div, .team > div, .tier > div {
+    width: 100%;
+    margin-bottom: 5%;
+  }
+  .person {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
 
-  
+  .person > .pHeader > h2 {
+    margin-top: 2%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .about_text, .about_text2 {
+    margin-bottom: 5%;
+  }
+  .projects {
+    margin-left: 0;
+    padding: 10% 4%;
+  }
+  .project1, .project2 {
+    padding: 5%;
+  }
+  .person, .Event, .tier {
+    padding: 5%;
+  }
+  .main {
+    padding: 10% 4%;
+  }
+}
+
+@media (max-width: 768px) {
+  .two-column {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 768px) {
+  .nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.project, .team-member {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.section {
+  padding: 2rem 1rem;
+  margin: 0 auto;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+@media (max-width: 768px) {
+  .about-section, .approach-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+body {
+  font-size: 1.2rem; /* Adjust as necessary */
 }
