--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ body {
 .main {
   font-size: 22px;
   line-height: 35px;
-  padding: 1% 5%;
+  padding: 1% 5% 1% 25%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -106,14 +106,7 @@ body {
   justify-content: space-evenly;
 }
 
-.partners {
-  padding-top: 5%;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap; /* Allow wrapping for smaller screens */
-  align-items: center;
-  justify-content: space-evenly;
-}
+
 
 
 .about2 {
@@ -140,18 +133,33 @@ body {
   height: auto;
 }
 
+.partners {
+  padding-top: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .partners > h2 {
   text-align: center;
   color: green;
-  font-size: 1.5rem; /* Adjusted font size */
+  font-size: 1.5rem;
   margin-bottom: 5%;
 }
 
 .logo {
-  margin: 0 auto;
   display: flex;
+  justify-content: space-around; 
   flex-wrap: wrap; /* Allow wrapping for smaller screens */
-  justify-content: space-evenly;
+  width: 100%;
+}
+
+.logo > a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px ; /* Adjust as needed */
 }
 
 .logo > a > img {
@@ -160,10 +168,11 @@ body {
 }
 
 #uwLogo {
-  margin-top: 2%;
   width: 400px;
   height: 100px;
+  object-fit: contain;
 }
+
 
 h1 {
   font-size: 1.5rem; /* Adjusted font size */
@@ -215,7 +224,6 @@ p, ul {
 .team {
   margin: 5%;
   flex-direction: column;
- 
   max-width: 1200px; /* Adjust as needed */
   justify-content: space-evenly;
 }
@@ -224,9 +232,48 @@ p, ul {
   width: 100px;
   height: 100px;
   border-radius: 25%;
-  object-fit: cover;
+  object-fit: contain;
   margin-right: 10%;
   justify-content: space-evenly;
+}
+
+
+.person {
+  padding-top: 2%;
+  margin-bottom: 10%;
+  box-shadow: 2px 2px 20px #e6e9ea;
+  width: 800px;
+  max-width: 800px;
+  border-radius: 25px;
+  display: flex;
+  flex-wrap: wrap; /* Allow wrapping for smaller screens */
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.person > .img > img {
+  width: 200px;
+  max-width: 200px;
+  height: 200px;
+  border-radius: 25px;
+  object-fit: cover;
+  margin: 5%;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.person > .pHeader > h2 > a  {
+  margin-top: 2%;
+  
+  padding-left: 2%;
+  color: green;
+  width: 100%;
+  max-width: auto;
+}
+
+.person > .pHeader {
+  padding: 2%;
+  text-align: center;
 }
 
 .projects {
@@ -245,7 +292,7 @@ p, ul {
 }
 
 .project1, .project2 {
-  margin: 5% 0;
+  margin: 5% 0%;
   padding: 5%;
   border-radius: 50px;
   background-color: rgb(248, 246, 246);
@@ -264,46 +311,12 @@ p, ul {
   max-width: 300px;
   height: auto;
   border-radius: 25%;
+  object-fit: cover;
 }
 
 .project1 h2, .project2 h2 {
   padding-bottom: 5%;
   color: green;
-}
-
-.person {
-  padding-top: 2%;
-  margin-bottom: 10%;
-  box-shadow: 2px 2px 20px #e6e9ea;
-  width: 100%;
-  max-width: 800px;
-  border-radius: 25px;
-  display: flex;
-  flex-wrap: wrap; /* Allow wrapping for smaller screens */
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.person > .img > img {
-  width: 100%;
-  max-width: 200px;
-  height: auto;
-  border-radius: 25px;
-  object-fit: cover;
-  margin: 5%;
-  justify-content: space-evenly;
-}
-
-.person > .pHeader > h2 {
-  margin-top: 2%;
-  margin-right: 5%;
-  color: green;
-  width: 100%;
-  max-width: auto;
-}
-
-.person > .pHeader {
-  padding: 2%;
 }
 
 .Event {
